change git username

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://leejinwoo.github.io/react-movies"
+  "homepage": "https://leejw951208.github.io/react-movies"
 }
